# rendinator

./: Cargo.toml  README.md
assets/fonts/: source_code_pro.font
assets/shaders/: cluster_build.comp.spv  cluster_update.comp.spv  depth_reduce.comp.spv  depth_resolve.comp.spv  draw_cull.comp.spv  light_update.comp.spv  pbr.frag.spv  pbr.vert.spv  sdf.vert.spv  skybox.comp.spv  skybox.frag.spv  skybox.vert.spv
crates/asset/: Cargo.toml
crates/asset/src/: lib.rs  normal.rs
crates/asset_import/: Cargo.toml  rustfmt.toml
crates/asset_import/src/: gltf.rs  lib.rs  normals.rs
crates/font/: Cargo.toml
crates/font/src/: generate.rs  lib.rs
crates/math/: Cargo.toml
crates/math/src/: bezier.rs  lib.rs  polynom.rs  rect.rs
crates/render/: Cargo.toml
crates/render/examples/: scene.rs
crates/render/src/: camera.rs  command.rs  constants.rs  debug.rs  descriptor.rs  device.rs  graph.rs  gui.rs  instance.rs  lib.rs  mesh.rs  render_targets.rs  resources.rs  scene.rs  shade.rs  shader.rs  swapchain.rs  sync.rs
crates/render/src/hal/: command.rs  descriptor.rs  device.rs  instance.rs  mod.rs  resources.rs  shader.rs  swapchain.rs  sync.rs
crates/render/src/shaders/: brdf.glsl  constants.glsl  light.glsl  scene.glsl  test.glsl  tonemap.glsl  util.glsl
crates/render/src/shaders/gui/: frag.glsl  vert.glsl
crates/render/src/shaders/mesh/: depth_reduce.comp.glsl  draw_cull.comp.glsl  frag.glsl  gbuffer.comp.glsl  vert.glsl
crates/render/src/shaders/shade/: shade.comp.glsl
crates/rendi_asset/: Cargo.toml
crates/rendi_asset/src/: lib.rs
crates/rendi_data_structs/: Cargo.toml
crates/rendi_data_structs/src/: lib.rs  sorted_map.rs
crates/rendi_math/: Cargo.toml
crates/rendi_math/src/: lib.rs  rect.rs
crates/rendi_render/: Cargo.toml
crates/rendi_render/src/: buffer.rs  desc.rs  device.rs  image.rs  instance.rs  lib.rs  reflect.rs  surface.rs  swapchain.rs
crates/rendi_render/src/mem/: block.rs  bump.rs  mod.rs
crates/rendi_res/: Cargo.toml
crates/rendi_res/src/: bump.rs  dummy.rs  lib.rs  res.rs  slab.rs
crates/rendi_sdf/: Cargo.toml
crates/rendi_sdf/src/: generate.rs  lib.rs
crates/rendi_shader/: Cargo.toml
crates/rendi_shader/src/: desc.rs  lib.rs
crates/shader/: Cargo.toml
crates/shader/src/: lib.rs
src/: atmosphere.rs  bloom.rs  camera.rs  command.rs  context.rs  core.rs  depth_reduce.rs  display.rs  frame.rs  light.rs  main.rs  pass.rs  render.rs  renderer.rs  resource.rs  resources.rs  scene.rs  shade.rs  shadow.rs  skybox.rs  temporal_resolve.rs  test.rs  text.rs  util.rs  visibility.rs
src/asset/: gltf.rs  mod.rs  normal.rs  quantize.rs
src/include_shaders/: consts.wgsl  light.wgsl  mesh.wgsl  pbr.wgsl  util.wgsl
src/pass/: cmd.rs  mod.rs
src/shaders/: atmosphere.glsl  atmosphere.wgsl  blend.wgsl  bloom.wgsl  brdf.glsl  camera.glsl  cascade_setup.wgsl  cluster_build.comp.glsl  cluster_update.comp.glsl  compile.sh  depth_reduce.comp.glsl  depth_reduce.wgsl  depth_resolve.comp.glsl  display.wgsl  draw_cull.comp.glsl  light.glsl  light_update.comp.glsl  luminance.wgsl  mesh.glsl  pbr.frag.glsl  pbr.vert.glsl  sdf.vert.glsl  shade.wgsl  shadow_render.wgsl  skybox.comp.glsl  skybox.frag.glsl  skybox.vert.glsl  temporal_resolve.wgsl  tonemap.glsl  visibility.wgsl
tools/asset_gen/: Cargo.toml
tools/asset_gen/src/: main.rs
