[package]
name = "rendinator"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.0"

anyhow = "1.0.57"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.9.0"

winit = "0.26.1"
raw-window-handle = "^0.4.2"

bytemuck = { version = "1.11.0", features = ["derive"] }
smallvec = { version = "1.8.0", features = ["union"] }
ahash = "0.8.1"

rendi_res = { path = "crates/rendi_res/" }
rendi_asset = { path = "crates/rendi_asset/" }
rendi_math = { path = "crates/rendi_math/" }
rendi_sdf = { path = "crates/rendi_sdf/" }
rendi_shader = { path = "crates/rendi_shader/" }
rendi_data_structs = { path = "crates/rendi_data_structs/" }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-metal = "0.2.0"

[dev-dependencies]
shaderc = "0.8.0"
rand = "0.8.5"
