[package]
name = "rendinator"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
wgpu = { version = "0.17", features = ["serde", "trace", "replay", "naga", "expose-ids"] }
winit = "0.28.6"
bit-set = "0.5.3"
glam = { version = "0.24.1", features = ["bytemuck", "serde"] }
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"] }
half = { version = "2.3.1", features = ["bytemuck", "serde"] }
gltf = { version = "1.3.0", features = ["KHR_materials_emissive_strength", "KHR_materials_ior"] }
image = "0.24.7"
texpresso = "2.0.1"
mikktspace = "0.3.0"
bincode = "1.3.3"
eyre = "0.6.8"
naga = { version = "0.13.0", features = ["span"] }
naga_oil = "0.9"
bitflags = { version = "2.4.0", features = ["bytemuck"] }
