[package]
name = "asset_import"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.7"
texpresso = "2.0.1"
mikktspace = "0.3.0"
eyre = "0.6.8"
glam = { version = "0.24.2", features = ["bytemuck", "serde"] }
gltf = { version = "1.3.0", features = ["KHR_materials_emissive_strength", "KHR_materials_ior"] }
asset = { path = "../asset" }
bytemuck = "1.14.0"
meshopt = "0.1.9"