cargo-features = ["codegen-backend"]

[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.3"
glam = "0.24.2"
eyre = "0.6.8"
raw-window-handle = "0.5.2"
asset = { path = "../asset" }
bytemuck = { version = "1.14.0", features = ["derive"] }
vk-shader-macros = "0.2.9"
bitflags = "2.4.1"
slab = "0.4.9"

egui = { version = "0.23.0", optional = true }
epaint = { version = "0.23.0", optional = true, features = ["bytemuck"] }

[dev-dependencies]
winit = { version = "0.28", features = [] }
egui-winit = "0.23.0"
egui = { version = "0.23.0" }
epaint = { version = "0.23.0", features = ["bytemuck"] }
bit-set = "0.5.3"
asset_import = { path = "../asset_import" }
aftermath-rs = "0.1.2"

[[example]]
name = "scene"
required-features = ["gui"]

[features]
gui = ["dep:egui", "dep:epaint"]

[build]
rustflags = ["-Z", "threads=8"]

[profile.dev]
codegen-backend = "cranelift"
opt-level = 2
