[package]
name = "rendi_render"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.0"
bitflags = "1.3.2"
thiserror = "1.0.37"
log = "0.4.17"

winit = "0.26.1"
raw-window-handle = "^0.4.2"

rendi_data_structs = { path = "../rendi_data_structs/" }
rendi_res = { path = "../rendi_res/" }

[dev-dependencies]
shaderc = "0.8.0"
