[package]
name = "asset_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytemuck = { version = "1.11.0", features = ["derive"] }
glam = { version = "0.20.4", features = ["bytemuck", "serde"] }
gltf = "1.0.0"
image = "0.24.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
clap = { version = "3.2.17", features = ["derive"] }

asset = { path = "../../crates/asset" }
